deploy/030-Service-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    metrics: enabled
  name: metrics
spec:
  ports:
  - name: metrics
    port: 8081
    targetPort: 8081
    protocol: TCP
  selector:
    metrics: enabled
