deploy/050-Route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: prometheus
spec:
  port:
    targetPort: web
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: prometheus-operated
